# news-python-ai

./: .gitignore  pyproject.toml
.github/workflows/: main-test.yml
src/: timeit_platzi_news.py
